feat: achieve 100 percent test coverage on all files

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ logs/calculator.log
 ## ignore any test csvs
 
 ## test_history.csv is not used anymore. commented out
+tets_history_empty.csv
 
 ## Ignore coverage
 
